implemented event system
implemented the event and listener system and went on with working on the server and database system